--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js",
-    "build":"npm install"
-
+    "start": "node index.js",
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +14,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
